--- a/app/src/main/res/layout/catcreationpane.xml
+++ b/app/src/main/res/layout/catcreationpane.xml
@@ -26,4 +26,12 @@
         android:background="@android:drawable/btn_dropdown"
         android:spinnerMode="dropdown" />
 
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="New Button"
+        android:id="@+id/button"
+        android:layout_row="2"
+        android:layout_column="1" />
+
 </GridLayout>
