--- a/app/src/main/res/layout/catcreationpane.xml
+++ b/app/src/main/res/layout/catcreationpane.xml
@@ -7,7 +7,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceSmall"
-        android:text="Small Text"
+        android:text="Country:"
         android:id="@+id/textView"
         android:layout_row="0"
         android:layout_column="0" />
@@ -26,12 +26,6 @@
         android:background="@android:drawable/btn_dropdown"
         android:spinnerMode="dropdown" />
 
-    <Button
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="New Button"
-        android:id="@+id/button"
-        android:layout_row="2"
-        android:layout_column="1" />
+
 
 </GridLayout>
